# apidocs/api.yaml
@@ -77,6 +77,7 @@ components:
         - length
         - mapSize
         - pvpEnabledAt
+        - tournament
       properties:
         id:
           type: integer
@@ -181,6 +182,9 @@ components:
         hostingName:
           type: string
           description: If defined, should override the users Reddit username for the match
+        tournament:
+          type: boolean
+          description: Whether the game is a tournament or not, tournaments bypass overhosting rules
       example:
         id: 3
         author: ghowden
@@ -212,6 +216,7 @@ components:
         pvpEnabledAt: 20
         approvedBy: everyone
         hostingName: Name Override
+        tournament: false
     CreateMatchRequest:
       type: object
       required:
@@ -229,6 +234,7 @@ components:
         - length
         - mapSize
         - pvpEnabledAt
+        - tournament
       properties:
         opens:
           type: string
@@ -304,6 +310,9 @@ components:
         hostingName:
           type: string
           description: If defined, should override the users Reddit username for the match
+        tournament:
+          type: boolean
+          description: Whether the game is a tournament or not, tournaments bypass overhosting rules
       example:
         opens: '2017-08-28T15:15:00Z'
         address: example.com
@@ -325,6 +334,7 @@ components:
         mapSize: 1500
         pvpEnabledAt: 20
         hostingName: Name Override
+        tournament: false
 
 
 paths:
